--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.51.23",
+    "axios": "^1.10.0",
     "bignumber.js": "^9.1.2",
     "lucide-react": "^0.486.0",
     "motion": "^12.3.1",
